@@ -1209,12 +1209,16 @@ Octstr *conn_read_packet(Connection *conn, int startmark, int endmark)
             unlocked_read(conn);
 
         /* Find startmark, and discard everything up to it */
-        startpos = octstr_search_char(conn->inbuf, startmark, conn->inbufpos);
-        if (startpos < 0) {
-            conn->inbufpos = octstr_len(conn->inbuf);
-            continue;
+        if (startmark >= 0) {
+            startpos = octstr_search_char(conn->inbuf, startmark, conn->inbufpos);
+            if (startpos < 0) {
+                conn->inbufpos = octstr_len(conn->inbuf);
+                continue;
+            } else {
+                conn->inbufpos = startpos;
+            }
         } else {
-            conn->inbufpos = startpos;
+           startpos = conn->inbufpos;
         }
 
         /* Find first endmark after startmark */
