@@ -1,4 +1,8 @@
 2013-05-06 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/conn.c: changed conn_read_packet to accept startmark -1 and ignore
+      it in this case.
+
+2013-05-06 Alexander Malysh <amalysh at kannel.org>
     * gw/dlr_mysql.c: fixed memory leak.
 
 2013-04-13  Stipe Tolj  <stolj at kannel.org>
